# backend_template

./: .env  alembic.ini  demo_jwt.py  docker-compose.yaml  main.py  middleware.py  pyproject.toml  schm_test.py  test.py  validators.py  view_auth.py
alembic/: env.py
alembic/versions/: 2025_01_25_1824-c0538588aa9d_create_strapon_table.py  2025_01_25_1829-aaf1496d9225_create_vibrator_table.py
app/alembic/versions/: 2025_01_25_1819-10d713369c4d_create_user_table.py  2025_01_25_1822-dc1ac86114c6_create_dildo_table.py
app/api/v1/: __init__.py  user.py  views.py
app/auth/: __init__.py  utils.py
app/config/: config.py
app/core/crud/: __init__.py  profile_crud.py  task_crud.py  user.py  user_crud.py
app/core/database/: __init__.py  base.py  engine.py  init_db.py  sessions.py
app/core/models/: __init__.py  author.py  book.py  borrowinglist.py  dildo.py  item.py  items.py  mixins.py  models.py  order.py  product.py  product_order.py  product_order_assoc.py  profile.py  reader.py  strapon.py  task.py  task_storage.py  taskworkerassoc.py  user.py  vibrator.py  worker.py
app/core/schemas/: __init__.py  items.py  profile_schema.py  task_schema.py  user.py  user_schema.py
