[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["xazme <juriii155@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.7.1"
fastapi = "^0.115.6"
asyncio = "^3.4.3"
sqlalchemy = "^2.0.37"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
